--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,43 @@
 version: "3.7"
 
 services:
-  django:
-    image: family-photos:0.4
+  nginx:
+    image: nginx:1.24.0
     ports:
-      - 8080:8000
+      - 80:80
+    networks:
+      - nginx_django
+    volumes:
+      - media_volume:/data/media/
+      - static_volume:/data/static/
+      - /home/ubuntu/techit/nginx.conf:/etc/nginx/nginx.conf
+
+  django:
+    image: family-photos:0.5
+    networks:
+      - nginx_django
+    volumes:
+      - media_volume:/home/techit/media/
+      - static_volume:/home/techit/staticfiles/
+
+  mariadb:
+    image: mariadb:11.0
+    networks:
+      - nginx_django
+    volumes:
+      - mariadb_volume:/var/lib/mysql/
+    environment:
+      MARIADB_USER: dhalswl94
+      MARIADB_PASSWORD: dhalswl94
+      MARIADB_ROOT_PASSWORD: dhalswl94
+      MARIADB_DATABASE: mariadb
+
+
+networks:
+  nginx_django:
+
+volumes:
+  media_volume:
+  static_volume:
+  mariadb_volume:
+
