Update body size limit

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,8 @@ http {
   server {
     listen 80;
 
+    client_max_body_size 10M;
+
     access_log /var/log/nginx/access.log;
 
     include mime.types;
